<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.v1.novo_vip.View.MainActivity">
    <!--  Cabeçalho  -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00EEEE"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView

                    android:id="@+id/image121"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/icon" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/app_name"
                        android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                        android:textColor="#090808"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="Cadastro Email e Senha"
                        android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse"
                        android:textColor="#090808"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <!--  Formulário  -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00EEEE"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtNome"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="#090808"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/digitNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="#2121AE" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtEmail"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="#090808"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/digitEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="Digite seu email.."
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <TextView

                android:id="@+id/senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtSenhaA"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="#090808"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/digitPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="Cadastre uma senha..."
                android:inputType="numberPassword"
                android:textSize="14sp" />

            <TextView

                android:id="@+id/pass2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/txtSenhaB"
                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
                android:textColor="#090808"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/digitPass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="Confirme a senha..."
                android:inputType="numberPassword"
                android:textSize="14sp" />

            <CheckBox

                android:id="@+id/ckCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:onClick="validartermo"
                android:text="@string/txtTermo"
                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                android:textColor="#090808"
                android:textSize="10sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <!--  Botões  -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00EEEE"
            android:orientation="vertical">

            <Button

                android:id="@+id/btncadast"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"

                android:text="Cadastrar "
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textSize="10sp" />

            <Button


                android:id="@+id/btnVoltar"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="Voltar"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textSize="12sp"
                tools:text="Voltar" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>