<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.v1.novo_vip.View.LoginActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="Login"
        android:textColor="#495595"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtEmail"
        android:textColor="#ED78E14B"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Digite seu email cadastrado..."
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/Senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtSenhaA"
        android:textColor="#ED78E14B"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenhaA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Digite sua senhad de acesso.."
        android:inputType="numberPassword" />


    <CheckBox
        android:id="@+id/ckLembrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:onClick="lembrarSenha"
        android:text="Lembrar"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/recuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="216dp"
            android:text="Recuperar Senha"
            android:textColor="#ED78E14B"
            android:textStyle="bold" />


    <Button
        android:id="@+id/acessar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="acessar" />

    <Button

        android:id="@+id/sejavip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Seja Vip" />


    <TextView

        android:id="@+id/versao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:text="Versão 0.6"
        android:textColor="#ED78E14B"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/termos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#ED78E14B"
        android:text="Ler Política de Privacidade"
        android:textSize="14dp"
     android:textStyle="bold"/>
</androidx.appcompat.widget.LinearLayoutCompat>