<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15151A"
    tools:context="com.example.v1.novo_vip.View.LoginActivity">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/txtAppName"
        android:text="@string/app_name"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="25dp"
            android:paddingEnd="30dp"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/Email"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEmail"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/editEmail"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:defaultFocusHighlightEnabled="false"
                android:hint="Email Cadastrado"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/Senha"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSenhaA"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSenhaA"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtHintSenhaA"
                android:inputType="numberPassword" />

            <CheckBox
                android:id="@+id/ckLembrar"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Lembrar"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recuperar"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="Recuperar Senha"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/acessar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:text="Acessar"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sejavip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:text="Seja um de nós"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/versao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Versão 1.0"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/termos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="Ler Política de Privacidade e Termos de Uso"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>